--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -5,18 +5,32 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
 }
+
+p {
+    color: darkgrey;
+    text-align: center;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
+//headings
 h1 {
     font-family: 'Poiret One', sans-serif;
     color: #fff;
-    font-size: 6em;
+    font-size: 4em;
     padding: 40px;
-    text-align: center
+    text-align: center;
 }
 h2 {
     font-family: 'Poiret One', sans-serif;
     color: #fff;
-    font-size: 4em;
-    text-align: center
+    font-size: 3em;
+    text-align: center;
 }
 h3 {
     font-family: 'Poiret One', sans-serif;
@@ -26,22 +40,21 @@ h3 {
 h4 {
     padding: 10px;
 }
-a:link {
-    text-decoration: none;
-    color: black;
-}
-a:hover {
-    text-decoration: none;
-    color: steelblue;
-}
-a:visited {
-    text-decoration: none;
-    color: black;
-}
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
+
+// links
+a {
+    &:link {
+        text-decoration: none;
+        color: black;
+    }
+    &:hover {
+        text-decoration: none;
+        color: steelblue;
+    }
+    &:visited {
+        text-decoration: none;
+        color: black;
+    }
 }
 header {
     background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../../images/header-img.jpeg);
@@ -54,16 +67,15 @@ header {
         padding-top: 10vh;
     }
     button {
-        ;
         background: transparent;
         border: 2px solid #fff;
         padding: 25px;
         border-radius: 10px;
         color: #fff;
         margin: 0 auto;
-    }
-    button:hover {
-        border: 2px solid darkgrey;
+        &:hover {
+            border: 2px solid darkgrey;
+        }
     }
 }
 section {
@@ -79,9 +91,11 @@ nav {
         display: inline-block;
     }
     img {
-        padding: 50px 45px 0;
+        padding: 30px 45px 0;
     }
 }
+
+//sticky menu
 .sticky {
     width: 100%;
     position: fixed;
@@ -92,42 +106,40 @@ nav {
     margin: 0 auto;
     border-bottom: 1px dotted lightgrey;
     z-index: 2;
-    ul.menu li {
-        padding: 0 10px;
+//    ul.menu li {
+//        padding: 0 10px;
+//    }
+}
+
+ul {
+    &.menu {
+        li {
+            list-style-type: none;
+            display: inline-block;
+            color: darkgrey;
+            text-transform: uppercase;
+            font-family: 'Dosis', sans-serif;
+            letter-spacing: 0.5em;
+            padding: 20px;
+            font-size: 0.7em;
+            font-weight: 600;
+        }
     }
 }
-//.logo {
-//    float: left;
-//        padding: 20px;
-//}
-ul.menu {
-    li {
-        list-style-type: none;
-        display: inline-block;
-        color: darkgrey;
-        text-transform: uppercase;
-        font-family: 'Dosis', sans-serif;
-        letter-spacing: 0.5em;
-        padding: 20px;
-        font-size: 0.7em;
-        font-weight: 600;
-    }
-}
+
+//line
 hr {
     border: 0;
     border-top: 1px dotted lightgrey;
     width: 100%;
+    &.underline {
+        width: 50%;
+        margin: 0 auto;
+        padding: 30px;
+    }
 }
-.underline {
-    width: 50%;
-    margin: 0 auto;
-    padding: 50px;
-}
-p {
-    color: darkgrey;
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
+
+// about-me section
 #profilepic {
     border-radius: 50%;
     height: 250px;
@@ -155,6 +167,8 @@ p {
         border: 1px solid lightgrey;
     }
 }
+
+//portfolio section
 .works {
     border: 1px solid lightgrey;
     width: 250px;
@@ -170,7 +184,6 @@ ul {
         color: darkgrey;
     }
 }
-
 .portfolio-work {
     border: 1px solid lightgrey;
     width: 250px;
@@ -182,102 +195,93 @@ ul {
     display: inline-block;
 }
 .hovereffect {
-width:100%;
-height:100%;
-float:left;
-overflow:hidden;
-position:relative;
-text-align:center;
-cursor:default; 
+    width: 100%;
+    height: 100%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
 }
-
 .hovereffect .overlay {
-width:100%;
-height:100%;
-position:absolute;
-overflow:hidden;
-top:0;
-left:0;
-opacity:0;
-background-color:rgba(0,0,0,0.5);
--webkit-transition:all .4s ease-in-out;
-transition:all .4s ease-in-out;
-    a:link, a:visited, a:hover {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
+    a:link,
+    a:visited,
+    a:hover {
         color: #fff;
     }
-    
 }
-
 .hovereffect img {
-display:block;
-position:relative;
--webkit-transition:all .4s linear;
-transition:all .4s linear;
+    display: block;
+    position: relative;
+    -webkit-transition: all .4s linear;
+    transition: all .4s linear;
 }
-
 .hovereffect h2 {
-text-transform:uppercase;
-color:#fff;
-text-align:center;
-position:relative;
-font-size:17px;
-background:rgba(0,0,0,0.6);
--webkit-transform:translatey(-100px);
--ms-transform:translatey(-100px);
-transform:translatey(-100px);
--webkit-transition:all .2s ease-in-out;
-transition:all .2s ease-in-out;
-padding:10px;
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    background: rgba(0, 0, 0, 0.6);
+    -webkit-transform: translatey(-100px);
+    -ms-transform: translatey(-100px);
+    transform: translatey(-100px);
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    padding: 10px;
 }
-
 .hovereffect a.info {
-text-decoration:none;
-display:inline-block;
-text-transform:uppercase;
-color:#fff;
-border:1px solid #fff;
-background-color:transparent;
-opacity:0;
-filter:alpha(opacity=0);
--webkit-transition:all .2s ease-in-out;
-transition:all .2s ease-in-out;
-margin:50px 0 0;
-padding:7px 14px;
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    margin: 50px 0 0;
+    padding: 7px 14px;
 }
-
 .hovereffect a.info:hover {
-box-shadow:0 0 5px #fff;
+    box-shadow: 0 0 5px #fff;
 }
-
 .hovereffect:hover img {
--ms-transform:scale(1.2);
--webkit-transform:scale(1.2);
-transform:scale(1.2);
+    -ms-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
 }
-
 .hovereffect:hover .overlay {
-opacity:1;
-filter:alpha(opacity=100);
+    opacity: 1;
+    filter: alpha(opacity=100);
 }
-
-.hovereffect:hover h2,.hovereffect:hover a.info {
-opacity:1;
-filter:alpha(opacity=100);
--ms-transform:translatey(0);
--webkit-transform:translatey(0);
-transform:translatey(0);
-}
-
+.hovereffect:hover h2,
 .hovereffect:hover a.info {
--webkit-transition-delay:.2s;
-transition-delay:.2s;
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -ms-transform: translatey(0);
+    -webkit-transform: translatey(0);
+    transform: translatey(0);
+}
+.hovereffect:hover a.info {
+    -webkit-transition-delay: .2s;
+    transition-delay: .2s;
 }
 
+// skills section
 .skills {
     line-height: 50px;
-    h4 {
-        //        line-height: 4em;
-    }
     li {
         padding: 10px;
         display: inline;
@@ -293,6 +297,8 @@ transition-delay:.2s;
         padding: 20px 20px 0px;
     }
 }
+
+// footer section
 footer {
     text-align: center;
     padding: 2em;
@@ -316,14 +322,6 @@ footer {
     }
 }
 @media (max-width: 768px) {
-    //    .container, header {
-    //        
-    //    }
-    //    header {
-    //        div {
-    //           padding-top: 0; 
-    //        }
-    //    }
     h1 {
         font-size: 2em;
         padding: 0;
@@ -339,5 +337,11 @@ footer {
     }
     #profilepic {
         height: 100px;
+    }
+    hr {
+        padding: 0;
+    }
+    li {
+        padding: 5px;
     }
 }
