yoga project update

--- a/projects/yoga/sass/partials/_base.scss
+++ b/projects/yoga/sass/partials/_base.scss
@@ -1,103 +1,90 @@
-//.container {
-//    width: 1000px;
-//    margin: 0 auto;
+//* {
+//    border: 1px solid red;
 //}
-.container-fluid {
-    padding-top: 80px;
+html {
+    font-size: 16px;
 }
+//.row {
+//    padding-right: 0;
+//    margin-right: 0;
+//}
 
-.row {
-  padding-right: 0px;
-  margin-right: 0px;
-}
+
+//header
 header {
     background-image: url(../images/header.png);
     background-size: cover;
+    background-position: center;
     color: #fff;
-    min-height: 840px;
+    min-height: 100vh;
     margin: 0 auto;
 }
-//.header-box {
-//    width: 539px;
-//
-//}
-.text-header {
-    font-size: 1.1em;
-    color: #ffffff;
-}
-.shape {
-    background-color: rgb(102, 169, 0);
-    background: url(../images/shape.png);
-    background-size: cover;
-    width: 100%;
-    height: 100px;
-    margin: 0 auto;
-}
-.shape2 {
-    background: url(../images/shape2.png);
-    background-size: cover;
-    width: 100%;
-    height: 300px;
-    margin: 0 auto;
-    p {
-        font-family: 'Poppins', sans-serif;
-        font-size: 1em;
-    }
-}
-.shape3 {
-    background: url(../images/shape2.png);
-    background-size: cover;
-    height: 342px;
-    //    background-color: rgb(102, 169, 0);
-    //    top: 150px;
-}
-.cta {
-    padding-top: 100px;
-    letter-spacing: 2px;
-    p {
-        color: #fff;
-        letter-spacing: 2px;
-        font-size: 1em;
-    }
-}
-h1 {
+.heading {
     text-transform: uppercase;
-    font-family: 'Poppins', sans-serif;
+    font-family: $poppins;
     font-size: 5em;
+    @media #{$phone} {
+        font-size: 3em;
+    }
     line-height: 1.04;
-    text-align: left;
     text-shadow: 0px 2px 16px rgba(0, 0, 0, 0.29);
     margin-top: 20vh;
 }
+.subheading {
+    font-size: 1.1em;
+    color: #fff;
+}
+
+//bg shapes
+@mixin shape-basic {
+    background-size: cover;
+//    width: 100%;
+//    margin: 0 auto;
+}
+
+.shape {
+    @include shape-basic;
+    background-color: $lightgreen;
+    background: url(../images/shape.png);
+    height: 80px;
+}
+.shape2 {
+    @include shape-basic;
+    background: url(../images/shape2.png);
+    height: 150px;
+}
+.shape3 {
+    @include shape-basic;
+    background: url(../images/shape3.png);
+    height: 200px;
+    //    top: 150px;
+}
+
 h2 {
     color: #fff;
-    font-family: 'PT Serif', serif;
+    font-family: $ptserif;
     font-weight: bold;
-    line-height: 1.875;
+    //    line-height: 1.875;
     text-align: center;
 }
 h3 {
     font-size: 2.5em;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 900;
+    font-family: $poppins;
+    font-weight: bold;
     padding: 20px;
 }
-
 h5 {
     font-weight: 700;
 }
+//navbar
 .navbar-default {
     background-color: transparent;
     border: 0px;
-    
     img {
         float: left;
-        margin: 10px;
+        padding-bottom: 10px;
     }
     ul {
-        list-style-type: none;
-        display: inline-block;
-        float: right;
         padding: 15px;
         font-size: 1em;
     }
@@ -105,101 +92,116 @@ h5 {
         li {
             a:link {
                 color: #fff;
-                text-decoration: none;
             }
             a:visited {
                 color: #fff;
-                text-decoration: none;
             }
             a:hover {
-                color: #66a900;
-                border-bottom: 2px solid #66a900;
+                color: #fff;
+                border-bottom: 2px solid $lightgreen;
             }
         }
     }
+    .navbar-toggle {
+        margin: 20px 10px;
+        &:focus {
+            background-color: darkgreen;
+        }
+        .icon-bar {
+            background-color: #fff;
+        }
+    }
 }
-
 p {
-    font-family: 'PT Serif', serif;
+    font-family: $ptserif;
     font-size: 1.1em;
     color: #aeaeae;
     line-height: 30px;
 }
 .section-numbers {
-    color: rgba(51, 51, 51, 0.15);
+    color: $lightgrey;
     font-size: 2.5em;
-    font-family: 'PT Serif', serif;
+    font-family: $ptserif;
 }
 .section-color-words {
-    color: #66a900;
+    color: $lightgreen;
+}
+.who-list {
+    display: flex;
+    align-items: baseline;
 }
 .sub-text {
     font-weight: bold;
-    //    font-size: 1em;
     line-height: 3.5em;
-    //    margin: 10px;
-    .numbers {
-        color: #fff;
-        font-family: 'PT Serif', serif;
-        background-color: #66a900;
-        border-radius: 50%;
-        //        background-image: url(../../images/round.png);
-        border: 3px solid #fff;
-        box-shadow: 0 0 0 1px #66a900;
-        padding: 0.7em;
-    }
 }
+.numbers {
+    height: 50px;
+    width: 50px;
+    color: #fff;
+    font-family: $ptserif;
+    background-color: #66a900;
+    border-radius: 50%;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    margin: 10px;
+}
+// call-to-action
 .cta {
+    background-color: $lightgreen;
+    padding-bottom: 30px;
+    p {
+        color: #fff;
+        letter-spacing: 2px;
+        font-size: 1em;
+    }
     button {
-        background-color: #ffffff;
-        color: #66a900;
+        background-color: #fff;
+        color: $lightgreen;
         font-size: 1.1em;
         font-weight: 600;
         border: 0;
         padding: 20px;
-        margin: 40px;
+        //        margin: 40px;
         border-radius: 3px;
         box-shadow: 0px 2px 32px 0px rgba(0, 0, 0, 0.03);
-        width: 270px;
-        height: 57px;
+        &:hover {
+            box-shadow: 0px 2px 32px 0px rgba(0, 0, 0, 0.3);
+            color: darkgreen;
+        }
     }
-    button:hover {
-        box-shadow: 0px 2px 32px 0px rgba(0, 0, 0, 0.3);
-        color: darkgreen;
+    .cta-arrow {
+        margin-top: 50px;
     }
 }
-
-  .carousel-inner > .item > img,
-  .carousel-inner > .item > a > img {
-     height: 250px;
-     margin: 0 auto;
-  }
-
+// carousel
+.carousel-img {
+    height: 250px;
+    margin: 0 auto;
+}
 .carousel-control.right {
     background: transparent;
+    margin-right: -10px;
 }
 .carousel-control.left {
     background: transparent;
+    margin-left: -10px;
 }
-
 .carousel-fade {
     .carousel-inner {
         .item {
             transition-property: opacity;
         }
-        
         .item,
         .active.left,
         .active.right {
             opacity: 0;
         }
-
         .active,
         .next.left,
         .prev.right {
             opacity: 1;
         }
-
         .next,
         .prev,
         .active.left,
@@ -208,15 +210,28 @@ p {
             transform: translate3d(0, 0, 0);
         }
     }
-
-    .carousel-control {
-        z-index: 2;
+    //    .carousel-control {
+    //        z-index: 2;
+    //    }
+}
+.carousel-indicators {
+    li {
+        background-color: $lightgreen;
     }
 }
-
-
-
-
+.glyphicon-chevron-right:before,
+.glyphicon-chevron-right:after,
+{
+    color: $lightgreen;
+    margin-right: -100px;
+}
+.glyphicon-chevron-left:before,
+.glyphicon-chevron-left:after,
+{
+    color: $lightgreen;
+    margin-left: -100px;
+}
+// quote
 blockquote {
     border: 0;
     .quote {
@@ -225,15 +240,16 @@ blockquote {
     }
     .name {
         font-size: 16px;
-        font-family: 'Poppins';
+        font-family: $poppins;
         color: #333333;
         font-weight: 700;
     }
 }
+// panels
 .panel-default {
     border-radius: 3px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 12px 38px 0px rgba(0, 0, 0, 0.11);
+    background-color: #fff;
+    box-shadow: 0px 12px 38px 0px $shadow-panel;
     padding: 0;
     p {
         padding: 0 20px;
@@ -245,8 +261,8 @@ blockquote {
     .panel-body {
         padding: 0;
         h4 {
-            border-left: 2px solid #66a900;
-            border-right: 2px solid #66a900;
+            border-left: 2px solid $lightgreen;
+            border-right: 2px solid $lightgreen;
             background-color: #f6f6f6;
             text-transform: uppercase;
             padding: 20px;
@@ -255,7 +271,6 @@ blockquote {
             color: #aaaaaa;
             font-weight: bold;
         }
-        
     }
     .panel-footer {
         background-color: #fff;
@@ -269,44 +284,37 @@ blockquote {
         }
     }
 }
-
-
 .panel {
     button {
         background: none;
         margin: 0;
-        width: auto;
+        //        width: auto;
     }
-}
-
-.panel:hover {
-    h4 {
+    &:hover {
+        h4 {
             color: #fff;
-            background-color: #66a900;
+            background-color: $lightgreen;
         }
-    button {
+        button {
             color: #66a900;
-            border-bottom: 1px solid #66a900;
+            border-bottom: 1px solid $lightgreen;
             border-radius: 0;
             box-shadow: 0;
         }
+    }
 }
-
+// footer
 footer {
-    padding-bottom: 40px;
+    padding: 30px 0;
     li {
-        list-style-type: none;
-        display: inline-block;
         float: right;
         padding: 15px;
         color: #9e9e9e;
         a:link {
             color: #9e9e9e;
-            text-decoration: none;
         }
         a:visited {
             color: #9d9d9d;
-            text-decoration: none;
         }
         a:hover {
             color: #9e9e9e;
