--- a/projects/yoga/sass/partials/_base.scss
+++ b/projects/yoga/sass/partials/_base.scss
@@ -2,14 +2,20 @@
 //    border: 1px solid red;
 //}
 html {
-    font-size: 16px;
+    font-size: 14px;
+    @media #{$phone} {
+        font-size: 12px;
+    }
 }
-//.row {
-//    padding-right: 0;
-//    margin-right: 0;
-//}
-
-
+.row {
+    padding-bottom: $pdg;
+}
+p {
+    font-family: $ptserif;
+    font-size: 1.1rem;
+    color: #aeaeae;
+    line-height: 30px;
+}
 //header
 header {
     background-image: url(../images/header.png);
@@ -17,61 +23,54 @@ header {
     background-position: center;
     color: #fff;
     min-height: 100vh;
-    margin: 0 auto;
 }
 .heading {
     text-transform: uppercase;
     font-family: $poppins;
-    font-size: 5em;
-    @media #{$phone} {
-        font-size: 3em;
-    }
-    line-height: 1.04;
+    font-size: 5rem;
     text-shadow: 0px 2px 16px rgba(0, 0, 0, 0.29);
     margin-top: 20vh;
 }
 .subheading {
-    font-size: 1.1em;
+    font-size: 1.1rem;
     color: #fff;
 }
-
+.section-heading {
+    font-size: 2.5rem;
+    font-family: $poppins;
+    font-weight: bold;
+    padding: 20px;
+}
 //bg shapes
 @mixin shape-basic {
-    background-size: cover;
-//    width: 100%;
-//    margin: 0 auto;
+    background-position: center;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
-
 .shape {
     @include shape-basic;
-    background-color: $lightgreen;
-    background: url(../images/shape.png);
+    background-image: url(../images/shape.png);
     height: 80px;
 }
 .shape2 {
     @include shape-basic;
-    background: url(../images/shape2.png);
+    background-image: url(../images/shape2.png);
     height: 150px;
 }
 .shape3 {
     @include shape-basic;
-    background: url(../images/shape3.png);
-    height: 200px;
-    //    top: 150px;
+    background-image: url(../images/shape3.png);
+    height: 150px;
 }
-
 h2 {
     color: #fff;
     font-family: $ptserif;
     font-weight: bold;
-    //    line-height: 1.875;
     text-align: center;
 }
 h3 {
-    font-size: 2.5em;
     font-family: $poppins;
     font-weight: bold;
-    padding: 20px;
 }
 h5 {
     font-weight: 700;
@@ -86,7 +85,6 @@ h5 {
     }
     ul {
         padding: 15px;
-        font-size: 1em;
     }
     .navbar-nav {
         li {
@@ -105,46 +103,46 @@ h5 {
     .navbar-toggle {
         margin: 20px 10px;
         &:focus {
-            background-color: darkgreen;
+            background-color: transparent;
+            border-color: #fff;
         }
         .icon-bar {
-            background-color: #fff;
+            background-color: #4d7410;
         }
     }
 }
-p {
-    font-family: $ptserif;
-    font-size: 1.1em;
-    color: #aeaeae;
-    line-height: 30px;
-}
 .section-numbers {
     color: $lightgrey;
-    font-size: 2.5em;
+    font-size: 6rem;
+    @media #{$phone} {
+        font-size: 4rem;
+    }
     font-family: $ptserif;
 }
 .section-color-words {
     color: $lightgreen;
 }
-.who-list {
+.about-list {
     display: flex;
-    align-items: baseline;
+    justify-content: flex-start;
 }
-.sub-text {
+.about-subtext {
     font-weight: bold;
-    line-height: 3.5em;
 }
-.numbers {
-    height: 50px;
-    width: 50px;
+.about-numbers {
+    height: 30px;
+    width: 30px;
+    @media #{$phone} {
+        padding: 0 10px
+    }
     color: #fff;
     font-family: $ptserif;
-    background-color: #66a900;
+    background-color: $lightgreen;
     border-radius: 50%;
     text-align: center;
     vertical-align: middle;
-    line-height: 50px;
-    margin: 10px;
+    line-height: 30px;
+    margin-right: 10px;
 }
 // call-to-action
 .cta {
@@ -153,16 +151,14 @@ p {
     p {
         color: #fff;
         letter-spacing: 2px;
-        font-size: 1em;
     }
     button {
         background-color: #fff;
         color: $lightgreen;
-        font-size: 1.1em;
+        font-size: 1.1rem;
         font-weight: 600;
         border: 0;
         padding: 20px;
-        //        margin: 40px;
         border-radius: 3px;
         box-shadow: 0px 2px 32px 0px rgba(0, 0, 0, 0.03);
         &:hover {
@@ -174,11 +170,7 @@ p {
         margin-top: 50px;
     }
 }
-// carousel
-.carousel-img {
-    height: 250px;
-    margin: 0 auto;
-}
+
 .carousel-control.right {
     background: transparent;
     margin-right: -10px;
@@ -214,35 +206,23 @@ p {
     //        z-index: 2;
     //    }
 }
-.carousel-indicators {
-    li {
-        background-color: $lightgreen;
-    }
-}
+
 .glyphicon-chevron-right:before,
 .glyphicon-chevron-right:after,
-{
-    color: $lightgreen;
-    margin-right: -100px;
-}
 .glyphicon-chevron-left:before,
-.glyphicon-chevron-left:after,
-{
+.glyphicon-chevron-left:after {
     color: $lightgreen;
-    margin-left: -100px;
 }
 // quote
 blockquote {
     border: 0;
     .quote {
         font-style: italic;
-        font-size: 14px;
     }
     .name {
-        font-size: 16px;
         font-family: $poppins;
         color: #333333;
-        font-weight: 700;
+        font-weight: bold;
     }
 }
 // panels
@@ -257,6 +237,7 @@ blockquote {
     .panel-heading {
         border: 0;
         background: #fff;
+        padding: 20px;
     }
     .panel-body {
         padding: 0;
@@ -267,7 +248,7 @@ blockquote {
             text-transform: uppercase;
             padding: 20px;
             margin: 0;
-            font-size: 14px;
+            font-size: 0.875rem;
             color: #aaaaaa;
             font-weight: bold;
         }
@@ -279,7 +260,7 @@ blockquote {
         button {
             color: #333333;
             text-transform: uppercase;
-            font-size: 14px;
+            font-size: 0.875rem;
             font-weight: bold;
         }
     }
@@ -288,7 +269,6 @@ blockquote {
     button {
         background: none;
         margin: 0;
-        //        width: auto;
     }
     &:hover {
         h4 {
@@ -296,7 +276,7 @@ blockquote {
             background-color: $lightgreen;
         }
         button {
-            color: #66a900;
+            color: $lightgreen;
             border-bottom: 1px solid $lightgreen;
             border-radius: 0;
             box-shadow: 0;
@@ -308,7 +288,7 @@ footer {
     padding: 30px 0;
     li {
         float: right;
-        padding: 15px;
+        padding: $pdg;
         color: #9e9e9e;
         a:link {
             color: #9e9e9e;
