--- a/projects/quote-machine/main.css
+++ b/projects/quote-machine/main.css
@@ -1,24 +1,22 @@
-body{
-  background-color: lightblue;
-  
+body {
+    background-color: lightblue;
+    font-size: 14px;
 }
 h1 {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-
 }
-
 .box {
-  margin: 0 auto;
-  height: 200px;
-  width: 400px;
-  background-color: white;
-  border-radius: 10px;
-  padding: 25px;
-  font-family: 'Bad Script', cursive;
-text-align: center;
+    margin: 0 auto;
+    height: 20%;
+    width: 40%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 25px;
+    font-family: 'Bad Script', cursive;
+    text-align: center;
+    font-size: 1.5em;
 }
-
 button {
     background: white;
     border: 1px solid lightgrey;
@@ -26,5 +24,3 @@ button {
     text-align: center;
     margin: 0 auto;
 }
-
-
